// Vitest Snapshot v1

exports[`<AnalysisDetail /> > should render 1`] = `
<div>
  <SubviewHeader>
    <SubviewHeaderTitle>
      Pathoscope
       for 
      bar
      <Connect(AnalysisCacheLink) />
    </SubviewHeaderTitle>
    <SubviewHeaderAttribution>
       started 
      <RelativeTime
        time="2019-05-28T19:04:25.201000Z"
      />
    </SubviewHeaderAttribution>
  </SubviewHeader>
  <PathoscopeViewer />
</div>
`;

exports[`<AnalysisDetail /> > should render error when workflow is invalid] 1`] = `
<div>
  Invalid analysis content
</div>
`;

exports[`<AnalysisDetail /> > should render expected view when workflow is NuVs] 1`] = `
<div>
  <SubviewHeader>
    <SubviewHeaderTitle>
      NuVs
       for 
      bar
      <Connect(AnalysisCacheLink) />
    </SubviewHeaderTitle>
    <SubviewHeaderAttribution>
       started 
      <RelativeTime
        time="2019-05-28T19:04:25.201000Z"
      />
    </SubviewHeaderAttribution>
  </SubviewHeader>
  <NuVsViewer />
</div>
`;

exports[`<AnalysisDetail /> > should render loading when [detail=null] 1`] = `<LoadingPlaceholder />`;

exports[`<AnalysisDetail /> > should render message when error is not null 1`] = `<NotFound />`;

exports[`<AnalysisDetail /> > should render pending when [detail.ready=false] 1`] = `
<Box>
  <LoadingPlaceholder
    margin="1.2rem"
    message="Analysis in progress"
  />
</Box>
`;
